<resources>
    <string name="app_name">ENCARGALO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Encargalo</string>
    <string name="nav_header_subtitle">Tendero</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_mitienda">MI TIENDA</string>
    <string name="menu_misproductos">MIS PRODUCTOS</string>
    <string name="menu_misordenes">MIS ORDENES</string>
    <string name="menu_mipublicidad">MI PUBLICIDAD</string>
    <string name="menu_miaprendizaje">MI APRENDIZAJE</string>
    <string name="menu_soporte">SOPORTE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="is_varstriniciariesionprincipal1">ENVIA TUS PRODUCTOS A MÁS PERSONAS</string>
    <string name="is_varstriniciariesionprincipal2">Continuar con Facebook</string>
    <string name="is_varstriniciariesionprincipal3">Continuar con Google</string>
    <string name="is_varstrcrearunacuenta1">Nombre</string>
    <string name="is_varstrcrearunacuenta2">Apellido</string>
    <string name="is_varstrcrearunacuenta3">Correo</string>
    <string name="is_varstrcrearunacuenta4">Tipo de Persona</string>
    <string name="is_varstrcrearunacuenta5">52</string>
    <string name="is_varstrcrearunacuenta6">Número de teléfono</string>
    <string name="is_varstrcrearunacuenta7">Acepto los términos y condiciones y políticas de Privacidad</string>
    <string name="is_varstrcrearunacuenta8">Registrarse</string>
    <string-array name="is_varstrcrearunacuenta9">
        <item>Persona natural</item>
        <item>Persona jurídica</item>
    </string-array>
    <string-array name="is_qpkitemspinnercodpais">
        <item>+1</item>
        <item>+52</item>
        <item>+51</item>
        <item>+54</item>
        <item>+55</item>
        <item>+56</item>
        <item>+57</item>
        <item>+58</item>
        <item>+501</item>
        <item>+502</item>
        <item>+503</item>
        <item>+504</item>
        <item>+505</item>
        <item>+506</item>
        <item>+507</item>
        <item>+591</item>
        <item>+591</item>
        <item>+592</item>
        <item>+595</item>
        <item>+597</item>
        <item>+598</item>
    </string-array>
    <string name="is_varstrverificacioncodigo1">Ingrese el código de verificación</string>
    <string name="is_varstrverificacioncodigo2">Se le ha enviado un código de verificación a tu cuenta de correo</string>
    <string name="is_varstrverificacioncodigo3">Ingrese código</string>
    <string name="is_varstrverificacioncodigo4">Reenviar Código</string>
    <string name="is_varstrverificacioncodigo5">Continuar</string>
    <string name="mio_varstrmisordenesprincipal1">Buscar id de orden</string>
    <string name="mio_varstrmisordenesprincipal2">Filtrar por estado</string>
    <string name="mio_varstrmisordenesprincipal9">Filtrar por fecha</string>
    <string name="mio_varstrmisordenesprincipal3">ID ORDEN:</string>
    <string name="mio_varstrmisordenesprincipal4">Cliente:</string>
    <string name="mio_varstrmisordenesprincipal5">Órden creada el:</string>
    <string name="mio_varstrmisordenesprincipal6">Órden entregada el:</string>
    <string name="mio_varstrmisordenesprincipal7">Detalle</string>
    <string name="mio_varstrmisordenesprincipal8">Chat</string>
    <string-array name="Filtro_ordenestado">
        <item> Mas antiguo</item>
        <item> Mas Reciente</item>
        <item> Creado</item>
        <item> Preparado</item>
        <item> En reparto</item>
        <item> Entregado</item>
    </string-array>
    <string-array name="Filtro_ordenfecha">
        <item> Fecha inicio</item>
        <item>Fecha fin</item>
    </string-array>
    <string name="mio_menu_detallepedido">DETALLE DEL PEDIDO</string>
    <string name="mio_menu_detalleproducto">DETALLE DEL PRODUCTO</string>
    <string name="mio_menu_conversacion">CONVERSACION</string>
    <string name="mio_varstrdetallepedido1">Detalle de pedido</string>
    <string name="mio_varstrdetallepedido2">Detalle de pedido N°: </string>
    <string name="mio_varstrdetallepedido3">00000000</string>
    <string name="mio_varstrdetallepedido4">Nombre del cliente: </string>
    <string name="mio_varstrdetallepedido5">Seleccione repartidor: </string>
    <string name="mio_varstrdetallepedido6">Chat</string>
    <string name="mio_varstrdetallepedido7">Estado del Pedido</string>
    <string name="mio_varstrdetallepedido8">Solicitada</string>
    <string name="mio_varstrdetallepedido9">Acepta/Rechazado</string>
    <string name="mio_varstrdetallepedido10">En Preparación</string>
    <string name="mio_varstrdetallepedido11">En Camino</string>
    <string name="mio_varstrdetallepedido12">Entregado</string>
    <string name="mio_varstrdetallepedido13">Reclamado</string>
    <string name="mio_varstrdetallepedido14">Dirección de entrega</string>
    <string name="mio_varstrdetallepedido15">dirección</string>
    <string name="mio_varstrdetallepedido16">Productos</string>
    <string-array name="repartidores">
        <item>Paolo</item>
        <item>Adrián</item>
    </string-array>
    <string name="mio_varstrdetalleproducto1">Detalle pedidos N:</string>
    <string name="mio_varstrdetalleproducto2">Productos:</string>
    <string name="mio_varstrdetalleproducto3">Agua mineral San Carlos 500ml</string>
    <string name="mio_varstrdetalleproducto4">s/1.5 x un</string>
    <string name="mio_varstrdetalleproducto5">1 un s/1.5</string>
    <string name="mio_varstrdetalleproducto6">Cancelar Orden</string>
    <string name="mio_varstrdetalleproducto7">Enviar</string>
    <string name="mio_varstrchatcliente1">CONVERSACIÓN</string>
    <string name="mio_varstrchatcliente2">Cliente</string>
    <string name="mio_varstrchatcliente4">repartidor</string>
    <string name="mio_varstrchatcliente7">Escribir aqui</string>
    <string name="mio_varstrchatcliente8">Tendero</string>
    <string name="mio_varstrmensajeconformacion1">El envío de los productos se hizo correctamente</string>
    <string name="mio_varstrmensajeconformacion2">Eso fué rápido</string>
    <string name="mio_varstrmensajeconformacion3">Volver inicio</string>
    <string name="mio_varstrcancelarorden1">¿Seguro que desea cancelar la orden?</string>
    <string name="mio_varstrcancelarorden2">Aceptar</string>
    <string name="mio_varstrcancelarorden3">Cancelar</string>
    <string name="mio_varstrenviarorden1">¿Seguro que desea enviar los productos al cliente?</string>
    <string name="mio_varstrenviarorden2">Aceptar</string>
    <string name="mio_varstrenviarorden3">Cancelar</string>
    <string name="mio_varstrterminosycondiciones1">Términos y condiciones de uso y Política de privacidad</string>
    <string name="mio_varstrterminosycondiciones2">Aceptar</string>
    <string name="mio_varstrterminosycondiciones3">Cancelar</string>
    <string name="mio_varstrbrindarubicacion1">¿Desea activar su ubicación?</string>
    <string name="mio_varstrbrindarubicacion2">Si</string>
    <string name="mio_varstrbrindarubicacion3">No</string>
    <string name="str_al_continuar">Al continuar, usted acepta los </string>
    <string name="str_terminos">Términos y condiciones, y Política de Privacidad</string>
    <string name="str_btn_continuar">Continuar</string>
    <string name="str_btn_cancelar">Cancelar</string>
    <string name="str_home">Eso fue rápido!</string>
    <string name="str_btn_volver_inicio">Volver a inicio</string>
    <string name="str_btn_volver">Volver</string>
    <string name="pub_varstrmenupublicidad0">Publicidad</string>
    <string name="pub_varstrmenupublicidad1">Crea un anuncio y llega  más personas</string>
    <string name="pub_varstrmenupublicidad2">Crear anuncio</string>
    <string name="pub_varstrmenupublicidad3">Mis anuncios</string>
    <string name="pub_varstrcrearanuncio0">Crear anuncio</string>
    <string name="pub_varstrcrearanuncio1">Imagen</string>
    <string name="pub_varstrcrearanuncio2">Seleccionar imagen</string>
    <string name="pub_varstrcrearanuncio3">Título del anuncio</string>
    <string name="pub_varstrcrearanuncio4">Texto del anuncio</string>
    <string name="pub_varstrcrearanuncio5">Link de redireccionamiento</string>
    <string name="pub_varstrcrearanuncio6">Programar fecha de lanzamiento:</string>
    <string name="pub_varstrcrearanuncio7">Fecha de inicio</string>
    <string name="pub_varstrcrearanuncio8">Fecha de fin</string>
    <string name="pub_varstrpagaranuncio1">Resumen y pago</string>
    <string name="pub_varstrpagaranuncio2">Resumen:</string>
    <string name="pub_varstrpagaranuncio3">Fecha:</string>
    <string name="pub_varstrpagaranuncio4">Cargo por día</string>
    <string name="pub_varstrpagaranuncio5">Días</string>
    <string name="pub_varstrpagaranuncio6">Total a pagar</string>
    <string name="pub_varstrpagaranuncio7">Desde</string>
    <string name="pub_varstrpagaranuncio8">Hasta</string>
    <string name="pub_varstrpagaranuncio9">Seleccione medio de pago:</string>
    <string name="pub_varstrpagaranuncio10">Paypal</string>
    <string name="pub_varstrpagaranuncio11">Pagar</string>
    <string name="pub_varstrlistadomisanuncios0">Mis anuncios</string>
    <string name="pub_varstrlistadomisanuncios1">Título: </string>
    <string name="pub_varstrlistadomisanuncios2">Publicado el: </string>
    <string name="pub_varstrlistadomisanuncios3">Días de duración: </string>
    <string name="pub_varstrlistadomisanuncios4">Nro. vistas: </string>
    <string name="pub_varstrlistadomisanuncios5">Tasa de conversión: </string>
    <string name="pub_varstrdetalleanuncio1">Descripción:</string>
    <string name="pub_varstrdetalleanuncio2">Fecha de publicación:</string>
    <string name="pub_varstrdetalleanuncio3">Monto pagado:</string>
    <string name="str_txt_simboloprecio">S/</string>
    <string name="rt_varstrdatostienda1">PERFIL BASICO (información visible al público)</string>
    <string name="rt_varstrdatostienda2">Nombre de la tienda</string>
    <string name="rt_varstrdatostienda3">Sitio web</string>
    <string name="rt_varstrdatostienda4">Tienda de abarrotes</string>
    <string name="rt_varstrdatostienda5">INFORMACION PRIVADA</string>
    <string name="rt_varstrdatostienda6">Correo</string>
    <string name="rt_varstrdatostienda7">Teléfono</string>
    <string name="rt_varstrdatostienda8">Ubicación</string>
    <string name="rt_varstrpuntodeventacreado">Tu punto de venta ha \nsido creado \nexitosamente</string>
    <string name="mit_varstrproductoagregado1">Tu producto se \nañadió exitosamente</string>
    <string name="mit_varstrproductoagregado2">volver</string>
    <string name="mit_varstrmenutienda1">  Proveedor</string>
    <string name="mit_varstrmenutienda2">  Ingreso Stock</string>
    <string name="mit_varstrmenutienda3">  Editar datos</string>
    <string name="mit_varstrmenutienda4">  Cambiar Tienda</string>
    <string name="mit_varstrmenutienda5">  Agregar Tienda</string>
    <string name="mit_varstrregistrarproducto1">Buscar Producto</string>
    <string name="mit_varstrregistrarproducto2">Nombre del producto</string>
    <string name="mit_varstrregistrarproducto5">Información general</string>
    <string name="mit_varstrregistrarproducto6">Descripción</string>
    <string name="mit_varstrregistrarproducto7">Categoria</string>
    <string name="mit_varstrregistrarproducto8">*Costo de producto</string>
    <string name="mit_varstrregistrarproducto9">*Precio de venta</string>
    <string name="mit_varstrregistrarproducto10">Agregar producto</string>
    <string name="mit_varstrregistrarproducto11">Producto propio</string>
</resources>