<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".tendero.Inicio_sesion.ui.Mi_tienda.rt_frgpuntoventacreado">

    <TextView
        android:id="@+id/textView12"
        style="@style/Headline_5"
        android:layout_marginTop="@dimen/nav_header_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rt_varstrpuntodeventacreado"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView7"
        style="@style/Subtitle_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_home"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/rt_pvcbtnvolverinicio"
        style="@style/Contained_button_green"
        android:layout_width="@dimen/nav_header_height"
        android:layout_height="wrap_content"
        android:background="@drawable/containedbtn_green"
        android:text="@string/str_btn_volver_inicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"/>

</androidx.constraintlayout.widget.ConstraintLayout>